--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,9 +10,9 @@ repos:
     - id: no-commit-to-branch
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.11.8
+  rev: v0.11.10
   hooks:
-    - id: ruff
+    - id: ruff-check
       args: ["--fix"]
       types_or: [ python, pyi, jupyter ]
     - id: ruff-format
