--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,17 +19,10 @@ repos:
       args: [--config=pyproject.toml]
       types_or: [ python, pyi, jupyter ]
 
-- repo: local
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.15.0
   hooks:
     - id: mypy
-      language: script
-      name: mypy
-      entry: /usr/bin/env poetry run mypy
-      args:
-        - --non-interactive
-        - --install-types
-        - --config-file=pyproject.toml
-      files: ^src/.*.py$
 
 ci:
     autofix_prs: false
