--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,23 @@ version = "0.1.0"
 readme = "README.md"
 authors = [{name = "Willow Ahrens", email = "willow.marie.ahrens@gmail.com"}]
 requires-python = '>=3.11,<4.0'
-dependencies = ['numpy (>=1.19)', "donfig (>=0.8.1.post1,<0.9.0)"]
+dependencies = ['numpy>=1.19', 'donfig>=0.8.1.post1,<0.9.0']
 
 [tool.poetry]
 packages = [{include = "finch", from = "src"}]
 requires-poetry = '>=2.0,<3.0'
 
-[tool.poetry.group.test.dependencies]
-pytest = "^7.4.4"
-pre-commit = "^3.6.0"
-pytest-cov = "^4.1.0"
-sparse = "^0.16.0"
-scipy = "^1.7"
-numba = "^0.61.0"
-mypy = "^1.15.0"
-pytest-mypy = "v1.0.1"
+[project.optional-dependencies]
+test = [
+    "pytest>=7.4.4,<8",
+    "pre-commit>=3.6.0,<4",
+    "pytest-cov>=4.1.0,<5",
+    "sparse>=0.17.0",
+    "scipy>=1.7,<2",
+    "numpy>=0.61.0",
+    "mypy==1.15.*",
+    "pytest-mypy==1.*",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
