--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ addopts = --cov-report term-missing --cov-report html --cov-report=xml --cov-rep
 filterwarnings =
     ignore::PendingDeprecationWarning
 testpaths =
-    finch
+    src/finch
+    tests
 junit_family=xunit2
 xfail_strict=true
