Add custom structs to FinchAssembly (#127)
* Merge branch 'wma/structs'

* pre-commit

* Use different class definition

* Updates to Numba backend

---------

Co-authored-by: Mateusz Sokół <8431159+mtsokol@users.noreply.github.com>
Co-authored-by: Mateusz Sokół <mat646@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ line-length = 88
 
 [tool.ruff.lint]
 select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF", "RUF022"]
+ignore = ["PYI024"]
 
 [tool.ruff.lint.isort.sections]
 numpy = ["numpy", "numpy.*", "scipy", "scipy.*"]
@@ -51,3 +52,6 @@ section-order = [
     "first-party",
     "local-folder",
 ]
+
+[tool.mypy]
+ignore_missing_imports = true
