Introduces regression testing to compare with reference outputs. (#135)
* Added support for regression

* minor fixes + renamed regression directory to references

* compiled the regex and moved patterns into a global dict

* added option for test-specific regex rules

* added option for test-specific regex rules

* using IR printer

* minor fix

* update style guide

* regenerating test_tree_regression_output

* minimal fix

* replace node with module in conftest

* Revert "replace node with module in conftest"

This reverts commit e8cc46c0b1d46ae1e526f52440fc3ddf29eb369e.

* seems to work still

* fix

* simpler

* pre-commit

* some stuff

* should work but doesnt

* ignores

* fix

* fix

---------

Co-authored-by: Willow Ahrens <willow.marie.ahrens@gmail.com>
Co-authored-by: Willow Ahrens <willow@csail.mit.edu>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,14 @@ repos:
     rev: v6.0.0
     hooks:
     - id: end-of-file-fixer
+      exclude: ^tests/reference/
     - id: trailing-whitespace
+      exclude: ^tests/reference/
     - id: mixed-line-ending
+      exclude: ^tests/reference/
     - id: name-tests-test
       args: ["--pytest-test-first"]
+      exclude: ^tests/reference/
     - id: no-commit-to-branch
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
